--- a/Frontend/src/pages/PagesForClient/Products/productsStye.css
+++ b/Frontend/src/pages/PagesForClient/Products/productsStye.css
@@ -437,7 +437,7 @@ body {
 /* IMAGE */
 .product-card img {
   width: 100%;
-  height: 220px;
+  height: 400px;
   object-fit: cover;
   transition: 0.4s;
 }
@@ -657,7 +657,7 @@ body {
 /* responsive adjustments */
 @media (max-width: 500px) {
   .pagination {
-    flex-direction: column;
+    flex-direction: row;
     gap: 8px;
   }
 
