--- a/Frontend/src/pages/PagesForClient/SpecificProduct/SpecificProductStyle.css
+++ b/Frontend/src/pages/PagesForClient/SpecificProduct/SpecificProductStyle.css
@@ -34,7 +34,7 @@
 
 .main-image {
   width: 100%;
-  height: 420px;
+  height: 600px;
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -432,7 +432,7 @@
   }
 
   .main-image {
-    height: 300px;
+    height: 400px;
   }
 
   .thumbnail-list {
